# flowspec-exporter

./: Dockerfile  README.md  app.py  config.toml  main.py  pyproject.toml  router_flowspec_parser.py  test_router_flowspec_parser.py  worker.py
.github/workflows/: release.yml
compose/: docker-compose.yml
compose/grafana/: datasources.yml
compose/grafana/dashboards/: flowspec.json
compose/prometheus/: prometheus.yml
flow_exporter/: exporter.py  main.py  parser.py  worker.py
flow_exporter/routers/: cisco_ios.py  huawei_vrp.py  juniper_junos.py
flowspec_exporter/: flowspec.py
src/: app.py  consts.py  exporter.py  flowspec.py  main.py  parser.py  worker.py
src/routers/: arista_eos.py  cisco_ios.py  common.py  huawei_vrp.py  juniper_junos.py
src/templates/: arista_eos_show_flow_spec.textfsm  cisco_ios_show_flowspec_vrf_all_detail.textfsm  juniper_junos_show_firewall_filter_detail.textfsm
templates/: cisco_ios_show_flowspec_vrf_all_detail.textfsm  index  juniper_junos_show_firewall_filter_detail.textfsm
tests/: __init__.py
tests/routers/: test_arista_eos.py  test_cisco_ios.py  test_juniper_junos.py
