[project]
name = "router-flowspec-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncssh>=2.20.0",
    "ntc-templates>=7.7.0",
    "polars==1.24.0",
    "python-json-logger>=3.2.1",
    "pytimeparse>=1.1.8",
    "streamlit-autorefresh>=1.0.1",
    "streamlit>=1.42.2",
    "tenacity>=9.0.0",
]

[tool.ruff]
lint.extend-select = ["I"]

[tool.pyright]
reportUnknownVariableType = false

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
