[project]
name = "router-flowspec-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "netaddr>=1.3.0",
    "asyncssh>=2.20.0",
    "polars>=1.33.1",
    "python-json-logger>=3.2.1",
    "pytimeparse>=1.1.8",
    "tenacity>=9.0.0",
    "dataclasses-json>=0.6.7",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.42.2",
    "streamlit-autorefresh>=1.0.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
reportUnknownVariableType = false

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
